--- a/mobile/app/src/main/res/menu/menu.xml
+++ b/mobile/app/src/main/res/menu/menu.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/action_more"
-    android:title=""
-    app:showAsAction="never">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_menu"
         android:icon="@drawable/bg_round_box_dark"
