--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -117,7 +117,7 @@
   overflow: hidden;
 }
 
-input[type='text'], input[type='password'], input[type='email']{
+input[type='text'], input[type='password'], input[type='email'],input[type='number']{
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
   border-radius: 24px;
   border-color: transparent;
