Add validate cost field in create and edit expense

--- a/mobile/app/src/main/res/layout/activity_create_expense.xml
+++ b/mobile/app/src/main/res/layout/activity_create_expense.xml
@@ -49,7 +49,7 @@
             android:background="@drawable/et_simple"
             android:hint="@string/cost_hint"
             android:importantForAutofill="no"
-            android:inputType="text"
+            android:inputType="numberDecimal"
             android:textColor="@color/light_gray" />
 
         <LinearLayout
