--- a/mobile/app/src/main/res/layout/activity_edit_expense.xml
+++ b/mobile/app/src/main/res/layout/activity_edit_expense.xml
@@ -47,9 +47,9 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:background="@drawable/et_simple"
-            android:hint="@string/description_hint"
+            android:hint="@string/cost_hint"
             android:importantForAutofill="no"
-            android:inputType="text"
+            android:inputType="numberDecimal"
             android:textColor="@color/light_gray" />
 
         <LinearLayout
