--- a/mobile/app/src/main/res/layout/activity_one_list.xml
+++ b/mobile/app/src/main/res/layout/activity_one_list.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="20dp"
     android:background="@drawable/bg_background">
 
     <LinearLayout
@@ -14,7 +15,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
             android:background="@drawable/bg_round_box_dark"
             android:gravity="center"
             android:orientation="vertical"
@@ -90,7 +90,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/bg_round_box_dark"
             android:gravity="center"
             android:orientation="vertical"
@@ -156,8 +156,16 @@
                 android:id="@+id/add_product_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
                 android:background="@drawable/btn_simple"
                 android:text="@string/add"
+                android:textAppearance="@style/simple_button" />
+            <Button
+                android:id="@+id/cancel_product_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/btn_simple"
+                android:text="@string/cancel"
                 android:textAppearance="@style/simple_button" />
         </LinearLayout>
     </LinearLayout>
