--- a/mobile/app/src/main/res/layout/item_member.xml
+++ b/mobile/app/src/main/res/layout/item_member.xml
@@ -34,12 +34,15 @@
             android:id="@+id/member_balance_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="right"
             android:layout_alignParentStart="false"
-            android:layout_centerHorizontal="true"
+            android:layout_toStartOf="@+id/show_debth_btn"
+            android:layout_toEndOf="@+id/member_name_tv"
             android:layout_centerVertical="true"
+            android:layout_marginHorizontal="10dp"
             android:textAppearance="@style/simple_label_bold"
             android:textColor="@color/red"
-            android:textSize="20sp" />
+            android:textSize="18sp" />
 
         <Button
             android:id="@+id/show_debth_btn"
@@ -63,17 +66,18 @@
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:textAppearance="@style/simple_label_bold"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:visibility="gone" />
 
         <Button
             android:id="@+id/reminder_btn"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="24dp"
+            android:layout_height="30dp"
             android:layout_alignParentStart="false"
             android:layout_centerVertical="true"
             android:layout_marginHorizontal="10dp"
             android:layout_toStartOf="@+id/handshake_btn"
+            android:layout_toEndOf="@+id/member_balance_to_you_tv"
             android:background="@drawable/ic_bell"
             android:visibility="gone" />
 
