--- a/mobile/app/src/main/res/layout/item_wallet.xml
+++ b/mobile/app/src/main/res/layout/item_wallet.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/bg_round_box_dark"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="20dp">
+    android:padding="10dp">
 
     <TextView
         android:id="@+id/name_tv"
@@ -68,6 +68,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/btn_simple"
         android:text="@string/go_to_wallet"
+        android:layout_margin="10dp"
         android:textAppearance="@style/simple_button"
         android:textColor="@color/light_gray"
         app:backgroundTint="@null" />
