--- a/mobile/app/src/main/res/layout/item_notification_invitation.xml
+++ b/mobile/app/src/main/res/layout/item_notification_invitation.xml
@@ -7,12 +7,13 @@
     android:background="@drawable/bg_round_box_dark"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="40dp">
+    android:padding="10dp">
 
     <TextView
         android:id="@+id/name_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
         android:textAppearance="@style/simple_label_bold"
         android:textColor="@color/yellow"
         android:textSize="36sp" />
@@ -21,14 +22,13 @@
         android:id="@+id/vector"
         android:layout_width="match_parent"
         android:layout_height="10dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginVertical="10dp"
         android:background="@drawable/v_line_white" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -56,7 +56,7 @@
         android:id="@+id/accept_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
+        android:layout_margin="5dp"
         android:background="@drawable/btn_simple"
         android:text="@string/accept"
         android:textAppearance="@style/simple_button"
@@ -67,6 +67,7 @@
         android:id="@+id/deny_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:background="@drawable/btn_danger"
         android:text="@string/deny"
         android:textAppearance="@style/simple_button"
