--- a/mobile/app/src/main/res/layout/item_notification_warning.xml
+++ b/mobile/app/src/main/res/layout/item_notification_warning.xml
@@ -7,13 +7,14 @@
     android:background="@drawable/bg_round_box_dark"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="40dp">
+    android:padding="15dp">
 
     <TextView
         android:id="@+id/warning_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/warning_debth"
+        android:gravity="center_horizontal"
         android:textAppearance="@style/simple_label_bold"
         android:textColor="@color/red"
         android:textSize="26sp" />
@@ -22,14 +23,13 @@
         android:id="@+id/vector"
         android:layout_width="match_parent"
         android:layout_height="10dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginVertical="10dp"
         android:background="@drawable/v_line_white" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -67,7 +67,7 @@
         android:id="@+id/accept_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
+        android:layout_margin="5dp"
         android:background="@drawable/btn_simple"
         android:text="@string/go_to_wallet"
         android:textAppearance="@style/simple_button"
@@ -78,7 +78,7 @@
         android:id="@+id/delete_notification_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
+        android:layout_margin="5dp"
         android:background="@drawable/btn_simple"
         android:text="@string/delete_notification"
         android:textAppearance="@style/simple_button"
