--- a/mobile/app/src/main/res/layout/activity_profile.xml
+++ b/mobile/app/src/main/res/layout/activity_profile.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="20dp"
     android:background="@drawable/bg_background">
 
     <LinearLayout
@@ -51,7 +52,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:layout_marginVertical="10dp"
             android:background="@drawable/bg_round_box_dark"
             android:gravity="center"
             android:orientation="vertical"
@@ -108,7 +109,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/bg_round_box_light"
             android:gravity="center"
             android:orientation="vertical"
@@ -118,7 +119,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:layout_marginBottom="20dp"
                 android:background="@drawable/bg_round_box_dark"
                 android:gravity="center_horizontal"
                 android:paddingVertical="15dp">
@@ -131,22 +131,21 @@
                     android:text="@string/notifications"
                     android:textAppearance="@style/simple_label_bold"
                     android:textColor="@color/yellow"
-                    android:textSize="24sp"></TextView>
+                    android:textSize="24sp"/>
 
                 <ImageButton
                     android:id="@+id/open_notification_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
-                    android:background="@drawable/btn_list_closed"></ImageButton>
+                    android:background="@drawable/btn_list_closed"/>
             </LinearLayout>
 
             <View
                 android:id="@+id/vector"
                 android:layout_width="match_parent"
                 android:layout_height="10dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
+                android:layout_marginVertical="10dp"
                 android:background="@drawable/v_line_gradient" />
 
             <androidx.recyclerview.widget.RecyclerView
