--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -225,7 +225,12 @@ border-radius: 38px;
   box-sizing: border-box;
 
 }
-
+.grey-scale{
+  filter: grayscale(100%);
+}
+.margin-bot-5{
+  margin-bottom: 5px;
+}
 .add-icon{
   
   background-image:url(add-icon.svg);
@@ -239,6 +244,24 @@ border-radius: 38px;
 .delete-user-icon{
     
   background-image:url(remove-user.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  border-color:transparent;
+  background-color: transparent;
+  
+}
+.delete-list-element{
+    
+  background-image:url(delete-list-element.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  border-color:transparent;
+  background-color: transparent;
+  
+}
+.edit-list-element{
+    
+  background-image:url(edit-list-element.png);
   background-size: contain;
   background-repeat: no-repeat;
   border-color:transparent;
@@ -343,7 +366,9 @@ border-radius: 38px;
 }
 /*Small devices*/
 @media only screen and (max-width: 540px){
- 
+  .text-size{
+    font-size: 15px !important;
+  }
   #content{
     padding-bottom: 80px;  
   }
@@ -447,7 +472,17 @@ border-radius: 38px;
 
 /*Medium devices*/
 @media only screen and (max-width: 768px){
- 
+  .icons-size{
+    width: 30px;
+    height: 30px;
+  }
+  .icons-size-2{
+    width: 20px;
+    height: 20px;
+  }
+  .text-size{
+    font-size: 15px !important;
+  }
   #content{
     padding-bottom: 80px;  
   }
