--- a/mobile/app/src/main/res/layout/activity_edit_profile.xml
+++ b/mobile/app/src/main/res/layout/activity_edit_profile.xml
@@ -63,33 +63,15 @@
             app:backgroundTint="@null"
             tools:ignore="RtlSymmetry" />
 
-        <LinearLayout
-            android:id="@+id/image_preview_l"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:visibility="gone">
 
-            <Button
-                android:id="@+id/rotate_left_btn"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:background="@drawable/btn_rotate_left" />
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/profile_image_iv"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:elevation="5dp"
-                android:padding="20dp"
-                android:scaleType="centerCrop" />
-
-            <Button
-                android:id="@+id/rotate_right_btn"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:background="@drawable/btn_rotate_right" />
-        </LinearLayout>
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/new_profile_image_iv"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:elevation="5dp"
+            android:padding="20dp"
+            android:scaleType="centerCrop"
+            android:visibility="gone"/>
 
         <Button
             android:id="@+id/save_change_btn"
