--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -228,6 +228,12 @@ border-radius: 38px;
 .img-preview{
   max-width: 100%;
   max-height: 100%;
+  
+}
+.profile-img-preview{
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 110px;
 }
 .center-content{
   text-align: center;
