--- a/mobile/app/src/main/res/layout/activity_chat.xml
+++ b/mobile/app/src/main/res/layout/activity_chat.xml
@@ -2,15 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:padding="20dp"
     android:background="@drawable/bg_background"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="20dp"
         android:background="@drawable/bg_round_box_dark"
         android:orientation="vertical"
         android:padding="20dp">
