--- a/mobile/app/src/main/res/layout/activity_chat.xml
+++ b/mobile/app/src/main/res/layout/activity_chat.xml
@@ -17,7 +17,7 @@
             android:id="@+id/name_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
+            android:layout_gravity="center_horizontal"
             android:textAppearance="@style/simple_label_bold"
             android:textColor="@color/yellow"
             android:textSize="36sp" />
