--- a/mobile/app/src/main/res/layout/current_user_message.xml
+++ b/mobile/app/src/main/res/layout/current_user_message.xml
@@ -6,7 +6,7 @@
     android:paddingTop="8dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/profile_user_image"
+        android:id="@+id/current_profile_user_image"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginTop="4dp"
@@ -15,22 +15,22 @@
         android:src="@drawable/profile_picture_placeholder"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.384"
-        app:layout_constraintStart_toEndOf="@+id/txtMessage"
+        app:layout_constraintStart_toEndOf="@+id/current_txtMessage"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/txtDate"
+        android:id="@+id/current_txtDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
         android:text="John Doe"
         android:textAppearance="@style/simple_label"
         android:textSize="12sp"
-        app:layout_constraintEnd_toStartOf="@+id/profile_user_image"
-        app:layout_constraintTop_toTopOf="@+id/profile_user_image" />
+        app:layout_constraintEnd_toStartOf="@+id/current_profile_user_image"
+        app:layout_constraintTop_toTopOf="@+id/current_profile_user_image" />
 
     <TextView
-        android:id="@+id/txtMessage"
+        android:id="@+id/current_txtMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="192dp"
@@ -42,6 +42,6 @@
         android:textAppearance="@style/simple_label"
         android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtDate" />
+        app:layout_constraintTop_toBottomOf="@+id/current_txtDate" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
