--- a/mobile/app/src/main/res/layout/activity_chat.xml
+++ b/mobile/app/src/main/res/layout/activity_chat.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:padding="20dp"
     android:background="@drawable/bg_background"
     android:orientation="vertical">
@@ -40,7 +41,9 @@
                 android:id="@+id/message_rv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+
                 android:layout_above="@+id/edit_send_message_rl"
+                tools:listitem="@layout/other_user_message"
                />
 
             <LinearLayout
