--- a/mobile/app/src/main/res/layout/other_user_message.xml
+++ b/mobile/app/src/main/res/layout/other_user_message.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_gravity="left"
     android:paddingTop="8dp">
-
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_user_image"
         android:layout_width="50dp"
@@ -12,28 +12,27 @@
         android:elevation="5dp"
         android:scaleType="centerCrop"
         android:src="@drawable/profile_picture_placeholder"
-        app:layout_constraintBottom_toTopOf="@+id/txtLogin"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/txtMessage"
-        app:layout_constraintHorizontal_bias="0.384"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/txtDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:text="John Doe"
+        android:layout_marginBottom="2dp"
+        android:layout_marginStart="10dp"
+        android:text="2021-11-11 15:21:00"
         android:textAppearance="@style/simple_label"
         android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/profile_user_image"
-        app:layout_constraintTop_toTopOf="@+id/profile_user_image" />
+        app:layout_constraintBottom_toTopOf="@+id/txtMessage"
+
+        app:layout_constraintStart_toEndOf="@+id/profile_user_image" />
 
     <TextView
         android:id="@+id/txtMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="192dp"
+        android:layout_marginStart="10dp"
         android:background="@drawable/et_simple"
         android:elevation="5dp"
         android:maxWidth="240dp"
@@ -42,21 +41,17 @@
         android:textAppearance="@style/simple_label"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtDate"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintStart_toEndOf="@+id/profile_user_image" />
 
     <TextView
         android:id="@+id/txtLogin"
-        android:layout_width="56dp"
-        android:layout_height="15dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="5dp"
-        android:text="18.05.2021 13:02"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="John"
         android:textAppearance="@style/simple_label_bold"
         android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/txtMessage"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profile_user_image" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
