Init layout and adapter for message notifications

--- a/mobile/app/src/main/res/layout/activity_profile.xml
+++ b/mobile/app/src/main/res/layout/activity_profile.xml
@@ -160,6 +160,12 @@
                 android:layout_height="wrap_content"
                 tools:listitem="@layout/item_notification_warning" />
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/notification_message_rv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:listitem="@layout/item_notification_message" />
+
             <TextView
                 android:id="@+id/go_to_statue_tv"
                 android:layout_width="wrap_content"
