--- a/mobile/app/src/main/res/layout/item_notification_message.xml
+++ b/mobile/app/src/main/res/layout/item_notification_message.xml
@@ -12,8 +12,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
         android:textAppearance="@style/simple_label_bold"
-        android:text="Nowa wiadomość"
+        android:text="@string/new_message"
         android:textColor="@color/yellow"
         android:textSize="36sp" />
 
