--- a/mobile/app/src/main/res/layout/item_notification_invitation.xml
+++ b/mobile/app/src/main/res/layout/item_notification_invitation.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/bg_round_box_dark"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="10dp">
+    android:padding="20dp">
 
     <TextView
         android:id="@+id/name_tv"
@@ -16,7 +16,7 @@
         android:gravity="center_horizontal"
         android:textAppearance="@style/simple_label_bold"
         android:textColor="@color/yellow"
-        android:textSize="36sp" />
+        android:textSize="30sp" />
 
     <View
         android:id="@+id/vector"
@@ -39,7 +39,7 @@
             android:layout_weight="1"
             android:text="@string/owner_label"
             android:textAppearance="@style/simple_label"
-            android:textSize="20sp" />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/number_of_members_tv"
@@ -48,7 +48,7 @@
             android:layout_weight="1"
             android:text="@string/number_of_members_label"
             android:textAppearance="@style/simple_label"
-            android:textSize="20sp" />
+            android:textSize="18sp" />
 
     </LinearLayout>
 
@@ -56,7 +56,7 @@
         android:id="@+id/accept_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
+        android:layout_marginBottom="5dp"
         android:background="@drawable/btn_simple"
         android:text="@string/accept"
         android:textAppearance="@style/simple_button"
@@ -67,7 +67,6 @@
         android:id="@+id/deny_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
         android:background="@drawable/btn_danger"
         android:text="@string/deny"
         android:textAppearance="@style/simple_button"
