--- a/mobile/app/src/main/res/layout/item_wallet.xml
+++ b/mobile/app/src/main/res/layout/item_wallet.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/bg_round_box_dark"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="10dp">
+    android:padding="20dp">
 
     <TextView
         android:id="@+id/name_tv"
@@ -22,14 +22,13 @@
         android:id="@+id/vector"
         android:layout_width="match_parent"
         android:layout_height="10dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginVertical="10dp"
         android:background="@drawable/v_line_white" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -68,7 +67,6 @@
         android:layout_height="wrap_content"
         android:background="@drawable/btn_simple"
         android:text="@string/go_to_wallet"
-        android:layout_margin="10dp"
         android:textAppearance="@style/simple_button"
         android:textColor="@color/light_gray"
         app:backgroundTint="@null" />
