Change expense_item layout

--- a/mobile/app/src/main/res/layout/item_expense.xml
+++ b/mobile/app/src/main/res/layout/item_expense.xml
@@ -21,14 +21,12 @@
         android:id="@+id/vector_1"
         android:layout_width="match_parent"
         android:layout_height="10dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginVertical="10dp"
         android:background="@drawable/v_line_gradient" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -65,7 +63,7 @@
         android:id="@+id/vector_2"
         android:layout_width="match_parent"
         android:layout_height="10dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginVertical="10dp"
         android:background="@drawable/v_line_gradient" />
 
     <TextView
