--- a/mobile/app/src/main/res/drawable/btn_edit_not_active.xml
+++ b/mobile/app/src/main/res/drawable/btn_edit_not_active.xml
@@ -6,10 +6,6 @@
     android:viewportHeight="25">
 
     <path
-        android:strokeColor="#9A9A9A"
-        android:strokeWidth="3"
-        android:strokeLineJoin="round"
-        android:strokeLineCap="round"
         android:pathData="M21.8961,5.03446 L25.1614,7.5925 L21.8961,5.03446 Z M23.9959,2.78092
 L15.1667,9.70104 C14.7105,10.0581,14.3994,10.513,14.2726,11.0085 L13.457,14.2081
 L17.5394,13.5677 C18.1714,13.4686,18.7511,13.2257,19.2074,12.8681
@@ -20,16 +16,20 @@ C28.5124,3.23574,28.3019,2.98887,28.0366,2.78092
 C27.7713,2.57296,27.4563,2.40801,27.1096,2.29547
 C26.763,2.18292,26.3914,2.125,26.0162,2.125
 C25.641,2.125,25.2695,2.18292,24.9228,2.29547
-C24.5762,2.40801,24.2612,2.57296,23.9959,2.78092 L23.9959,2.78092 Z" />
-    <path
+C24.5762,2.40801,24.2612,2.57296,23.9959,2.78092 L23.9959,2.78092 Z"
+        android:strokeWidth="3"
         android:strokeColor="#9A9A9A"
-        android:strokeWidth="4"
-        android:strokeLineJoin="round"
         android:strokeLineCap="round"
+        android:strokeLineJoin="round" />
+    <path
         android:pathData="M25.791,16.6243 L25.791,20.2493 C25.791,20.8903,25.4662,21.505,24.8879,21.9582
 C24.3097,22.4114,23.5254,22.666,22.7077,22.666 L5.74935,22.666
 C4.9316,22.666,4.14734,22.4114,3.5691,21.9582
 C2.99087,21.505,2.66602,20.8903,2.66602,20.2493 L2.66602,6.95768
 C2.66602,6.31674,2.99087,5.70205,3.5691,5.24884
-C4.14734,4.79563,4.9316,4.54102,5.74935,4.54102 L10.3743,4.54102" />
+C4.14734,4.79563,4.9316,4.54102,5.74935,4.54102 L10.3743,4.54102"
+        android:strokeWidth="4"
+        android:strokeColor="#9A9A9A"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round" />
 </vector>
