--- a/mobile/app/src/main/res/drawable/btn_danger_normal.xml
+++ b/mobile/app/src/main/res/drawable/btn_danger_normal.xml
@@ -1,24 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <corners
-        android:radius="24dp"
-        />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <corners android:radius="24dp" />
     <gradient
         android:angle="45"
-        android:centerX="35%"
         android:centerColor="@color/light_red"
-        android:startColor="@color/red"
+        android:centerX="35%"
         android:endColor="@color/yellow"
-        android:type="linear"
-        />
+        android:startColor="@color/red"
+        android:type="linear" />
     <padding
-        android:left="3dp"
-        android:top="0dp"
-        android:right="3dp"
         android:bottom="0dp"
-        />
+        android:left="3dp"
+        android:right="3dp"
+        android:top="0dp" />
     <size
         android:width="270dp"
-        android:height="60dp"
-        />
+        android:height="60dp" />
 </shape>
