--- a/mobile/app/src/main/res/drawable/btn_simple.xml
+++ b/mobile/app/src/main/res/drawable/btn_simple.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:dither="true">
+<selector xmlns:android="http://schemas.android.com/apk/res/android" android:dither="true">
 
-    <item
-        android:state_pressed="true"
-        android:drawable="@drawable/btn_simple_pressed" />
-    <item
-        android:drawable="@drawable/btn_simple_normal"/>
+    <item android:drawable="@drawable/btn_simple_pressed" android:state_pressed="true" />
+    <item android:drawable="@drawable/btn_simple_normal" />
 
 </selector>
