--- a/mobile/app/src/main/res/drawable/btn_simple_normal.xml
+++ b/mobile/app/src/main/res/drawable/btn_simple_normal.xml
@@ -1,21 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <corners
-        android:radius="24dp"
-        />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <corners android:radius="24dp" />
     <gradient
         android:angle="45"
-        android:centerX="35%"
         android:centerColor="@color/orange"
-        android:startColor="@color/dark_orange"
+        android:centerX="35%"
         android:endColor="@color/yellow"
-        android:type="linear"
-        />
+        android:startColor="@color/dark_orange"
+        android:type="linear" />
     <padding
-        android:left="3dp"
-        android:top="10dp"
-        android:right="3dp"
         android:bottom="10dp"
-        />
+        android:left="3dp"
+        android:right="3dp"
+        android:top="10dp" />
 
 </shape>
