--- a/mobile/app/src/main/res/drawable/btn_simple_pressed.xml
+++ b/mobile/app/src/main/res/drawable/btn_simple_pressed.xml
@@ -1,25 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <corners
-        android:radius="24dp"
-        />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <corners android:radius="24dp" />
     <gradient
         android:angle="45"
-        android:centerX="35%"
         android:centerColor="@color/orange"
-        android:startColor="@color/yellow"
+        android:centerX="35%"
         android:endColor="@color/dark_orange"
-        android:type="linear"
-        />
+        android:startColor="@color/yellow"
+        android:type="linear" />
     <padding
-        android:left="5dp"
-        android:top="10dp"
-        android:right="5dp"
         android:bottom="10dp"
-        />
+        android:left="5dp"
+        android:right="5dp"
+        android:top="10dp" />
 
     <stroke
         android:width="1dp"
-        android:color="#484848"
-        />
+        android:color="#484848" />
 </shape>
