--- a/mobile/app/src/main/res/drawable/btn_text.xml
+++ b/mobile/app/src/main/res/drawable/btn_text.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true"
-        android:color="@color/orange"/>
-    <item android:color="@color/yellow"/>
+    <item android:color="@color/orange" android:state_pressed="true" />
+    <item android:color="@color/yellow" />
 </selector>
