--- a/mobile/app/src/main/res/drawable/cb_person.xml
+++ b/mobile/app/src/main/res/drawable/cb_person.xml
@@ -1,20 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:dither="true">
+<selector xmlns:android="http://schemas.android.com/apk/res/android" android:dither="true">
 
-    <item
-        android:state_enabled="false"
-        android:state_checked="true"
-        android:drawable="@drawable/cb_person_checked_not_active" />
-    <item
-        android:state_checked="true"
-        android:drawable="@drawable/cb_person_checked" />
-    <item
-        android:state_enabled="false"
-        android:state_checked="false"
-        android:drawable="@drawable/cb_person_not_active" />
-    <item
-        android:drawable="@drawable/cb_person_not_checked"/>
+    <item android:drawable="@drawable/cb_person_checked_not_active" android:state_checked="true" android:state_enabled="false" />
+    <item android:drawable="@drawable/cb_person_checked" android:state_checked="true" />
+    <item android:drawable="@drawable/cb_person_not_active" android:state_checked="false" android:state_enabled="false" />
+    <item android:drawable="@drawable/cb_person_not_checked" />
 
 </selector>
 
