--- a/mobile/app/src/main/res/drawable/et_edittext.xml
+++ b/mobile/app/src/main/res/drawable/et_edittext.xml
@@ -1,19 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <corners
-        android:radius="26.5dp"
-        />
-    <solid
-        android:color="#F7F7F7"
-        />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <corners android:radius="26.5dp" />
+    <solid android:color="#F7F7F7" />
     <padding
-        android:left="8dp"
-        android:top="8dp"
-        android:right="8dp"
         android:bottom="8dp"
-        />
+        android:left="8dp"
+        android:right="8dp"
+        android:top="8dp" />
     <size
         android:width="270dp"
-        android:height="60dp"
-        />
+        android:height="60dp" />
 </shape>
