--- a/mobile/app/src/main/res/drawable/rb_radio_button.xml
+++ b/mobile/app/src/main/res/drawable/rb_radio_button.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:state_checked="true"
-        android:drawable="@drawable/rb_radio_button_selected" />
-    <item
-        android:drawable="@drawable/rb_radio_button_null"/>
+    <item android:drawable="@drawable/rb_radio_button_selected" android:state_checked="true" />
+    <item android:drawable="@drawable/rb_radio_button_null" />
 
 </selector>
