--- a/mobile/app/src/main/res/layout/activity_chat.xml
+++ b/mobile/app/src/main/res/layout/activity_chat.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:padding="20dp"
     android:background="@drawable/bg_background"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="20dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -43,17 +43,16 @@
                 android:layout_height="wrap_content"
 
                 android:layout_above="@+id/edit_send_message_rl"
-                tools:listitem="@layout/other_user_message"
-               />
+                tools:listitem="@layout/other_user_message" />
 
             <LinearLayout
                 android:id="@+id/edit_send_message_rl"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
+                android:layout_marginTop="20dp"
                 android:background="@drawable/bg_round_box_light"
                 android:orientation="horizontal"
-                android:layout_marginTop="20dp"
                 android:padding="10dp">
 
                 <EditText
