--- a/mobile/app/src/main/res/layout/activity_create_list.xml
+++ b/mobile/app/src/main/res/layout/activity_create_list.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
-    android:background="@drawable/bg_background">
+    android:background="@drawable/bg_background"
+    android:padding="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -78,8 +78,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/bg_round_box_dark"
             android:layout_marginBottom="10dp"
+            android:background="@drawable/bg_round_box_dark"
             android:gravity="center"
             android:orientation="vertical"
             android:padding="20dp">
