--- a/mobile/app/src/main/res/layout/activity_one_list.xml
+++ b/mobile/app/src/main/res/layout/activity_one_list.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp"
-    android:background="@drawable/bg_background">
+    android:background="@drawable/bg_background"
+    android:padding="20dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -160,6 +160,7 @@
                 android:background="@drawable/btn_simple"
                 android:text="@string/add"
                 android:textAppearance="@style/simple_button" />
+
             <Button
                 android:id="@+id/cancel_product_btn"
                 android:layout_width="match_parent"
