--- a/mobile/app/src/main/res/layout/activity_profile.xml
+++ b/mobile/app/src/main/res/layout/activity_profile.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp"
-    android:background="@drawable/bg_background">
+    android:background="@drawable/bg_background"
+    android:padding="20dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -131,14 +131,14 @@
                     android:text="@string/notifications"
                     android:textAppearance="@style/simple_label_bold"
                     android:textColor="@color/yellow"
-                    android:textSize="24sp"/>
+                    android:textSize="24sp" />
 
                 <ImageButton
                     android:id="@+id/open_notification_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
-                    android:background="@drawable/btn_list_closed"/>
+                    android:background="@drawable/btn_list_closed" />
             </LinearLayout>
 
             <View
