--- a/mobile/app/src/main/res/layout/activity_statistics.xml
+++ b/mobile/app/src/main/res/layout/activity_statistics.xml
@@ -93,7 +93,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
-                android:backgroundTint="@color/yellow"/>
+                android:backgroundTint="@color/yellow" />
 
             <Spinner
                 android:id="@+id/month1"
@@ -101,7 +101,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
-                android:backgroundTint="@color/yellow"/>
+                android:backgroundTint="@color/yellow" />
 
             <Spinner
                 android:id="@+id/year1"
@@ -109,7 +109,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
-                android:backgroundTint="@color/yellow"/>
+                android:backgroundTint="@color/yellow" />
 
         </LinearLayout>
 
@@ -137,7 +137,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
-                android:backgroundTint="@color/yellow"/>
+                android:backgroundTint="@color/yellow" />
 
             <Spinner
                 android:id="@+id/month2"
@@ -145,7 +145,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
-                android:backgroundTint="@color/yellow"/>
+                android:backgroundTint="@color/yellow" />
 
             <Spinner
                 android:id="@+id/year2"
@@ -153,7 +153,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
-                android:backgroundTint="@color/yellow"/>
+                android:backgroundTint="@color/yellow" />
 
         </LinearLayout>
 
@@ -243,8 +243,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:paddingStart="10dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:paddingStart="10dp">
 
                 <!-- Dodać tutaj tabele kategoria: koszt PLN-->
 
